@@ -1,3 +1,9 @@
+2005-12-07  Kenichi Handa  <handa@m17n.org>
+
+	* face.c (mface__for_chars): When font is specified and layouter
+	is found for it, if the layouter doesn't support one of a
+	character, use a face sans layouter for it.
+
 2005-12-06  Kenichi Handa  <handa@m17n.org>
 
 	* fontset.c (mfont__lookup_fontset): If only a fallback font is
